# fastocr

./: .gitignore  Dockerfile  README.md  build.sh  build_image.sh  docker-compose.yml  fastweb.service  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py  requirements.txt
scripts/: get_version.py
tests/: test_ocr.py
