# https://packaging.python.org/en/latest/tutorials/packaging-projects/#uploading-your-project-to-pypi
[build-system]
requires = [
    "hatchling",
    "hatch-fancy-pypi-readme",
]
build-backend = "hatchling.build"

[project]
name = "fastocr"
version = "0.0.1"
authors = [
    { name = "sfwwslm", email = "sfwwslm@gmail.com" },
]
description = "ocr 识别"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "ddddocr==1.5.6",
    "httpx==0.28.1",
]
[project.optional-dependencies]
dev = [
    "black",
]

[project.urls]
Homepage = "https://github.com/sfwwslm/fastocr"
Issues = "https://github.com/sfwwslm/fastocr/issues"

[tool.hatch.build.targets.wheel]
include = [
    "/app",
    "/README.md",
    "/tests",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
