[project]
name = "fastocr"
version = "0.1.1"
authors = [
    { name = "sfwwslm", email = "sfwwslm@gmail.com" },
]
description = "基于 FastAPI 和 ddddocr 的 OCR API 服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "fastapi==0.116.1",
    "uvicorn",
    "ddddocr==1.5.6"
]

[project.urls]
Homepage = "https://github.com/sfwwslm/fastocr"
Issues = "https://github.com/sfwwslm/fastocr/issues"
